# ragforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
app/api/: __init__.py  routes_collections.py  routes_documents.py  routes_eval.py  routes_graph.py  routes_health.py  routes_ingest.py  routes_query.py
app/core/: __init__.py  chunking.py  documents.py  pipeline.py
app/embeddings/: __init__.py  base.py  factory.py  hash_embedder.py  openai_embedder.py
app/eval/: __init__.py  judge.py  metrics.py
app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_provider.py  openai_provider.py
app/rag/: __init__.py  engine.py  graph.py  prompts.py
app/retrieval/: __init__.py  bm25.py  hybrid.py  retriever.py
app/vectorstore/: __init__.py  base.py  chroma_store.py  factory.py  memory_store.py
docs/: architecture.md
frontend/: Dockerfile  README.md  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  style.css  types.ts
frontend/src/components/: AskPanel.vue  DocumentsPanel.vue  IngestPanel.vue  KnowledgeGraph.vue  TopBar.vue
scripts/: demo.py  seed_ui_data.py
scripts/sample_data/: ai_ml_overview.md
tests/: conftest.py  test_api.py  test_chunking.py  test_documents.py  test_embeddings.py  test_eval.py  test_graph.py  test_rag_engine.py  test_retrieval.py  test_stream.py  test_vectorstore.py
(+1 files in other folders)
