[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragforge"
version = "0.1.0"
description = "A provider-agnostic Retrieval-Augmented Generation service with hybrid search and built-in evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RAGForge contributors" }]
keywords = ["rag", "llm", "retrieval", "embeddings", "vector-search", "fastapi"]

# Core runtime deps. The service runs fully offline with just these.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "numpy>=1.26",
    "tiktoken>=0.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Real model / storage backends — install only what you use.
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
chroma = ["chromadb>=0.5"]
pdf = ["pypdf>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/your-username/ragforge"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses `Depends(...)` as a default argument by design.
